--- a/app/static/css/sb-admin-2.css
+++ b/app/static/css/sb-admin-2.css
@@ -15,9 +15,9 @@
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #e74a3b;
-  --orange: #fd7e14;
-  --yellow: #f6c23e;
+  --red: #e74c3c;
+  --orange: #fa8231;
+  --yellow: #FFC312;
   --green: #1cc88a;
   --teal: #20c9a6;
   --cyan: #00a8ff;
@@ -28,8 +28,8 @@
   --secondary: #858796;
   --success: #1cc88a;
   --info: #00a8ff;
-  --warning: #f6c23e;
-  --danger: #e74a3b;
+  --warning: #FFC312;
+  --danger: #e74c3c;
   --light: #f8f9fc;
   --dark: #5a5c69;
   --breakpoint-xs: 0;
@@ -2015,7 +2015,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #e74a3b;
+  color: #e74c3c;
 }
 
 .invalid-tooltip {
@@ -2034,16 +2034,16 @@ textarea.form-control {
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e74a3b' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23e74a3b' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e74c3c' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23e74c3c' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
   background-repeat: no-repeat;
   background-position: center right calc(0.375em + 0.1875rem);
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
   box-shadow: 0 0 0 0.2rem rgba(231, 74, 59, 0.25);
 }
 
@@ -2059,13 +2059,13 @@ textarea.form-control {
 }
 
 .was-validated .custom-select:invalid, .custom-select.is-invalid {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
   padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e74a3b' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23e74a3b' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e74c3c' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23e74c3c' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .custom-select:invalid:focus, .custom-select.is-invalid:focus {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
   box-shadow: 0 0 0 0.2rem rgba(231, 74, 59, 0.25);
 }
 
@@ -2082,7 +2082,7 @@ textarea.form-control {
 }
 
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
-  color: #e74a3b;
+  color: #e74c3c;
 }
 
 .was-validated .form-check-input:invalid ~ .invalid-feedback,
@@ -2092,11 +2092,11 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label, .custom-control-input.is-invalid ~ .custom-control-label {
-  color: #e74a3b;
+  color: #e74c3c;
 }
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label::before, .custom-control-input.is-invalid ~ .custom-control-label::before {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
 }
 
 .was-validated .custom-control-input:invalid ~ .invalid-feedback,
@@ -2115,11 +2115,11 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
 }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label, .custom-file-input.is-invalid ~ .custom-file-label {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
 }
 
 .was-validated .custom-file-input:invalid ~ .invalid-feedback,
@@ -2129,7 +2129,7 @@ textarea.form-control {
 }
 
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label, .custom-file-input.is-invalid:focus ~ .custom-file-label {
-  border-color: #e74a3b;
+  border-color: #e74c3c;
   box-shadow: 0 0 0 0.2rem rgba(231, 74, 59, 0.25);
 }
 
@@ -2374,14 +2374,14 @@ fieldset:disabled a.btn {
 
 .btn-Standard, .btn-warning {
   color: #fff;
-  background-color: #f6c23e;
-  border-color: #f6c23e;
+  background-color: #FFC312;
+  border-color: #FFC312;
 }
 
 .btn-Standard:hover, .btn-warning:hover {
   color: #fff;
-  background-color: #f4b619;
-  border-color: #f4b30d;
+  background-color: #FBB91D;
+  border-color: #F9B411;
 }
 
 .btn-Standard:focus, .btn-Standard.focus,
@@ -2392,8 +2392,8 @@ fieldset:disabled a.btn {
 .btn-Standard.disabled, .btn-Standard:disabled,
 .btn-warning.disabled, .btn-warning:disabled {
   color: #fff;
-  background-color: #f6c23e;
-  border-color: #f6c23e;
+  background-color: #FFC312;
+  border-color: #FFC312;
 }
 
 .btn-Standard:not(:disabled):not(.disabled):active, .btn-Standard:not(:disabled):not(.disabled).active,
@@ -2401,7 +2401,7 @@ fieldset:disabled a.btn {
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
 .show > .btn-warning.dropdown-toggle {
   color: #fff;
-  background-color: #f4b30d;
+  background-color: #F9B411;
   border-color: #e9aa0b;
 }
 
@@ -2414,14 +2414,14 @@ fieldset:disabled a.btn {
 
 .btn-Prompt, .btn-orange {
   color: #fff;
-  background-color: #fd7e14;
-  border-color: #ff7400;
+  background-color: #fa8231;
+  border-color: #fa8231;
 }
 
 .btn-Prompt:hover, .btn-orange:hover {
   color: #fff;
-  background-color: #f27105;
-  border-color: #ff7400;
+  background-color: #f97014;
+  border-color: #f96a0a;
 }
 
 .btn-Prompt:focus, .btn-Prompt.focus,
@@ -2432,7 +2432,7 @@ fieldset:disabled a.btn {
 .btn-Prompt.disabled, .btn-Prompt:disabled,
 .btn-orange.disabled, .btn-orange:disabled {
   color: #fff;
-  background-color: #f6c23e;
+  background-color: #FFC312;
   border-color: #ff5400;
 }
 
@@ -2441,7 +2441,7 @@ fieldset:disabled a.btn {
 .btn-orange:not(:disabled):not(.disabled):active, .btn-orange:not(:disabled):not(.disabled).active,
 .show > .btn-orange.dropdown-toggle {
   color: #fff;
-  background-color: #f4b30d;
+  background-color: #F9B411;
   border-color: #e9aa0b;
 }
 
@@ -2454,8 +2454,8 @@ fieldset:disabled a.btn {
 
 .btn-Immediate, .btn-danger {
   color: #fff;
-  background-color: #e74a3b;
-  border-color: #e74a3b;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .btn-Immediate:hover, .btn-danger:hover {
@@ -2472,8 +2472,8 @@ fieldset:disabled a.btn {
 .btn-Immediate.disabled, .btn-Immediate:disabled,
 .btn-danger.disabled, .btn-danger:disabled {
   color: #fff;
-  background-color: #e74a3b;
-  border-color: #e74a3b;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .btn-Immediate:not(:disabled):not(.disabled):active, .btn-Immediate:not(:disabled):not(.disabled).active,
@@ -2689,14 +2689,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning {
-  color: #f6c23e;
-  border-color: #f6c23e;
+  color: #FFC312;
+  border-color: #FFC312;
 }
 
 .btn-outline-warning:hover {
   color: #fff;
-  background-color: #f6c23e;
-  border-color: #f6c23e;
+  background-color: #FFC312;
+  border-color: #FFC312;
 }
 
 .btn-outline-warning:focus, .btn-outline-warning.focus {
@@ -2704,15 +2704,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #f6c23e;
+  color: #FFC312;
   background-color: transparent;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,
 .show > .btn-outline-warning.dropdown-toggle {
   color: #fff;
-  background-color: #f6c23e;
-  border-color: #f6c23e;
+  background-color: #FFC312;
+  border-color: #FFC312;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
@@ -2721,14 +2721,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger {
-  color: #e74a3b;
-  border-color: #e74a3b;
+  color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .btn-outline-danger:hover {
   color: #fff;
-  background-color: #e74a3b;
-  border-color: #e74a3b;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .btn-outline-danger:focus, .btn-outline-danger.focus {
@@ -2736,15 +2736,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger.disabled, .btn-outline-danger:disabled {
-  color: #e74a3b;
+  color: #e74c3c;
   background-color: transparent;
 }
 
 .btn-outline-danger:not(:disabled):not(.disabled):active, .btn-outline-danger:not(:disabled):not(.disabled).active,
 .show > .btn-outline-danger.dropdown-toggle {
   color: #fff;
-  background-color: #e74a3b;
-  border-color: #e74a3b;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .btn-outline-danger:not(:disabled):not(.disabled):active:focus, .btn-outline-danger:not(:disabled):not(.disabled).active:focus,
@@ -4804,12 +4804,12 @@ a.badge-info:focus, a.badge-info.focus {
 
 .badge-warning {
   color: #fff;
-  background-color: #f6c23e;
+  background-color: #FFC312;
 }
 
 a.badge-warning:hover, a.badge-warning:focus {
   color: #fff;
-  background-color: #f4b30d;
+  background-color: #F9B411;
 }
 
 a.badge-warning:focus, a.badge-warning.focus {
@@ -4819,7 +4819,7 @@ a.badge-warning:focus, a.badge-warning.focus {
 
 .badge-danger {
   color: #fff;
-  background-color: #e74a3b;
+  background-color: #e74c3c;
 }
 
 a.badge-danger:hover, a.badge-danger:focus {
@@ -6264,17 +6264,17 @@ button.bg-info:focus {
 }
 
 .bg-Standard, .bg-warning {
-  background-color: #f6c23e !important;
+  background-color: #FFC312 !important;
 }
 
 a.bg-warning:hover, a.bg-warning:focus,
 button.bg-warning:hover,
 button.bg-warning:focus {
-  background-color: #f4b30d !important;
+  background-color: #F9B411 !important;
 }
 
 .bg-Immediate, .bg-danger {
-  background-color: #e74a3b !important;
+  background-color: #e74c3c !important;
 }
 
 a.bg-danger:hover, a.bg-danger:focus,
@@ -6312,7 +6312,7 @@ button.bg-dark:focus {
 }
 
 .bg-Prompt, .bg-orange {
-  background-color: #fd7e14 !important;
+  background-color: #fa8231 !important;
 }
 
 .border {
@@ -6372,11 +6372,11 @@ button.bg-dark:focus {
 }
 
 .border-warning {
-  border-color: #f6c23e !important;
+  border-color: #FFC312 !important;
 }
 
 .border-danger {
-  border-color: #e74a3b !important;
+  border-color: #e74c3c !important;
 }
 
 .border-light {
@@ -9421,11 +9421,11 @@ a.text-info:hover, a.text-info:focus {
 }
 
 .text-Prompt, .text-orange {
-  color: #fd7e14 !important;
+  color: #fa8231 !important;
 }
 
 .text-Standard, .text-warning {
-  color: #f6c23e !important;
+  color: #FFC312 !important;
 }
 
 a.text-warning:hover, a.text-warning:focus {
@@ -9433,7 +9433,7 @@ a.text-warning:hover, a.text-warning:focus {
 }
 
 .text-Immediate, .text-danger {
-  color: #e74a3b !important;
+  color: #e74c3c !important;
 }
 
 a.text-danger:hover, a.text-danger:focus {
@@ -9717,14 +9717,14 @@ a:focus {
 }
 
 .bg-gradient-warning {
-  background-color: #f6c23e;
-  background-image: linear-gradient(180deg, #f6c23e 10%, #dda20a 100%);
+  background-color: #FFC312;
+  background-image: linear-gradient(180deg, #FFC312 10%, #dda20a 100%);
   background-size: cover;
 }
 
 .bg-gradient-danger {
-  background-color: #e74a3b;
-  background-image: linear-gradient(180deg, #e74a3b 10%, #be2617 100%);
+  background-color: #e74c3c;
+  background-image: linear-gradient(180deg, #e74c3c 10%, #be2617 100%);
   background-size: cover;
 }
 
@@ -9870,19 +9870,19 @@ a:focus {
 }
 
 .border-left-Standard, .border-left-warning {
-  border-left: 0.25rem solid #f6c23e !important;
+  border-left: 0.25rem solid #FFC312 !important;
 }
 
 .border-bottom-warning {
-  border-bottom: 0.25rem solid #f6c23e !important;
+  border-bottom: 0.25rem solid #FFC312 !important;
 }
 
 .border-left-Immediate, .border-left-danger {
-  border-left: 0.25rem solid #e74a3b !important;
+  border-left: 0.25rem solid #e74c3c !important;
 }
 
 .border-bottom-danger {
-  border-bottom: 0.25rem solid #e74a3b !important;
+  border-bottom: 0.25rem solid #e74c3c !important;
 }
 
 .border-left-light {
@@ -9902,7 +9902,7 @@ a:focus {
 }
 
 .border-left-Prompt, .border-left-orange {
-  border-left: 0.25rem solid #fd7e14 !important;
+  border-left: 0.25rem solid #fa8231 !important;
 }
 .progress-sm {
   height: .5rem;
@@ -10080,15 +10080,15 @@ a:focus {
 }
 
 #PriorityStandard.active {
-  background-color: #f6c23e !important;
+  background-color: #FFC312 !important;
 }
 
 #PriorityPrompt.active {
-  background-color: #fd7e14 !important;
+  background-color: #fa8231 !important;
 }
 
 #PriorityImmediate.active {
-  background-color: #e74a3b !important;
+  background-color: #e74c3c !important;
 }
 
 @media (min-width: 576px) {
@@ -10857,7 +10857,7 @@ form.user .btn-user {
   content: attr(data-text);
   position: absolute;
   left: 2px;
-  text-shadow: -1px 0 #e74a3b;
+  text-shadow: -1px 0 #e74c3c;
   top: 0;
   color: #5a5c69;
   background: #f8f9fc;
