--- a/app/templates/deployment_card.html
+++ b/app/templates/deployment_card.html
@@ -12,7 +12,7 @@
         </div>
         <div class="card-body text-center">
             <p class="font-weight-bold text-left">{{ deployment.description }}</p>
-            <a href="{{ url_for('view_incidents', deployment_name=deployment.name) }}" class="btn {% if deployment.open_status %}btn-success{% else %}btn-danger{% endif %}">View Deployment</a>
+            <a href="{{ url_for('view_incidents', deployment_name=deployment.name, deployment_id=deployment.id) }}" class="btn {% if deployment.open_status %}btn-success{% else %}btn-danger{% endif %}">View Deployment</a>
         </div>
     </div>
 </div>
