--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
             if (feature.properties) {
                 layer.bindPopup(
                 `<div class="card shadow">
-                    <div class="card-header bg-` + feature.properties.priority + ` d-flex flex-row align-items-center justify-content-between">
+                    <div class="card-header bg-` + feature.properties.priority + ` align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold text-light">` + feature.properties.name + `</h6>
                     </div>
                     <div class="card-body">
