--- a/app/static/css/sb-admin-2.css
+++ b/app/static/css/sb-admin-2.css
@@ -2351,7 +2351,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-info:focus, .btn-info.focus {
-  box-shadow: 0 0 0 0.2rem rgba(84, 196, 212, 0.5);
+  0 0 0 0.2rem rgba(0, 168, 255, 0.45);
 }
 
 .btn-info.disabled, .btn-info:disabled {
@@ -2369,7 +2369,7 @@ fieldset:disabled a.btn {
 
 .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus,
 .show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(84, 196, 212, 0.5);
+  0 0 0 0.2rem rgba(0, 168, 255, 0.45);
 }
 
 .btn-Standard, .btn-warning {
@@ -2386,7 +2386,7 @@ fieldset:disabled a.btn {
 
 .btn-Standard:focus, .btn-Standard.focus,
 .btn-warning:focus, .btn-warning.focus {
-  box-shadow: 0 0 0 0.2rem rgba(247, 203, 91, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 195, 18, 0.49);
 }
 
 .btn-Standard.disabled, .btn-Standard:disabled,
@@ -2409,7 +2409,7 @@ fieldset:disabled a.btn {
 .show > .btn-Standard.dropdown-toggle:focus
 .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus,
 .show > .btn-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(247, 203, 91, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 195, 18, 0.49);
 }
 
 .btn-Prompt, .btn-orange {
@@ -2426,7 +2426,7 @@ fieldset:disabled a.btn {
 
 .btn-Prompt:focus, .btn-Prompt.focus,
 .btn-orange:focus, .btn-orange.focus {
-  box-shadow: 0 0 0 0.2rem rgba(242, 112, 18, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(250, 130, 49, 0.5);
 }
 
 .btn-Prompt.disabled, .btn-Prompt:disabled,
@@ -2449,7 +2449,7 @@ fieldset:disabled a.btn {
 .show > .btn-Prompt.dropdown-toggle:focus
 .btn-orange:not(:disabled):not(.disabled):active:focus, .btn-orange:not(:disabled):not(.disabled).active:focus,
 .show > .btn-orange.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(242, 112, 18, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(250, 130, 49, 0.5);
 }
 
 .btn-Immediate, .btn-danger {
