--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -38,7 +38,7 @@
 <script src='/static/js/L.Icon.Pulse.js'></script>
 <script>
 $(document).ready(function() {
-		  var map = L.map('Map').setView({lat: 55.872326, lng: -4.288094}, 15)
+		  var map = L.map('Map').setView({lat: 55.872326, lng: -4.288094}, 15);
 		  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
 			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
 			minZoom: 4,
@@ -51,7 +51,7 @@ $(document).ready(function() {
             map.flyTo(e.latlng, {
             animate: true,
             duration: 0.5
-          })
+          });
         }
 
         function onEachFeature(feature, layer) {
@@ -69,27 +69,27 @@ $(document).ready(function() {
                             <a class="btn btn-` + feature.properties.priority + ` text-light" href="` + feature.properties.url + `">Go To Incident</a>
                         </div>
                     </div>
-                </div>`)
+                </div>`);
             }
         }
 
-        var incidents_geojson = {{ geojson | tojson }}
+        var incidents_geojson = {{ geojson | tojson }};
 
         var geojsonLayer = L.geoJSON(incidents_geojson, {
             onEachFeature: onEachFeature,
             pointToLayer: function (geoJsonPoint, latlng) {
-                return L.marker(latlng, {icon: L.icon.pulse({iconSize:[10,10], color: geoJsonPoint.properties.colour, fillColor: geoJsonPoint.properties.colour})})
+                return L.marker(latlng, {icon: L.icon.pulse({iconSize:[10,10], color: geoJsonPoint.properties.colour, fillColor: geoJsonPoint.properties.colour, animate: geoJsonPoint.properties.animate})})
             }
-        }).addTo(map)
-        map.fitBounds(geojsonLayer.getBounds())
+        }).addTo(map);
+        map.fitBounds(geojsonLayer.getBounds());
 
         $('.list-group-item.list-group-flush').click( function(e) {
             map.flyTo(L.latLng($(this).data('latitude'), $(this).data('longitude')), 12, {
                 animate: true,
                 duration: 0.5
-            })
-        })
-	})
+            });
+        });
+	});
 
 
 
