--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -1,4 +1,4 @@
-<li id="TaskRow{{ task.id }}" class="list-group-item list-group-flush{% if task.completed %} text-muted{% endif %}">
+<li id="TaskRow{{ task.id }}" class="list-group-item list-group-flush{% if task.completed %} text-muted{% endif %}" value="{{ task.id }}">
     <div class="row align-items-center no-gutters">
         <div class="col mr-2">
             <h6 class="mb-0">
@@ -6,16 +6,29 @@
             </h6>
             {% set assigned_to = task.get_assigned() %}
             {% if assigned_to %}
-            <span class="text-xs">Assigned to {{ assigned_to }}</span>
+            <span id="Task{{ task.id }}Assigned" class="text-xs">Assigned to {{ assigned_to }}</span>
             {% endif %}
         </div>
         <div class="col-auto">
             <div>
-                <input class="task-checkbox" id="Task{{ task.id }}" value="{{ task.id }}" type="checkbox" {% if task.completed %}checked{% endif %}>
-                <a class="edit-opacity" href="#" role="button" data-toggle="modal" data-target="#editOverviewModal">
-                    <i class="fas fa-edit" data-toggle="tooltip" title="Edit Task"></i>
-                </a>
+                <input class="task-checkbox" id="Task{{ task.id }}" type="checkbox" {% if task.completed %}checked{% endif %}>
             </div>
         </div>
     </div>
+     <ol class="map-card-actions-list list-unstyled">
+        {% if (task.subtasks) or (task.comments) %}
+        <li class="map-card-actions">
+        {% endif %}
+        {% if task.subtasks %}
+        <i class="fas fa-tasks" data-toggle="tooltip" title="Sub-Tasks"></i>
+            <span class="map-card-actions-text">{{ task.subtask_string() }}</span>
+        {% endif %}
+        {% if task.comments %}
+        <i class="far fa-comment" data-toggle="tooltip" title="Comments"></i>
+            <span class="map-card-actions-text">{{ task.comments|length }}</span>
+        {% endif %}
+        {% if (task.subtasks) or (task.comments) %}
+        </li>
+        {% endif %}
+    </ol>
 </li>
